--- a/BitProject/WebContent/resources/css/style.css
+++ b/BitProject/WebContent/resources/css/style.css
@@ -25,7 +25,15 @@
 	margin-right : 10px;
 	max-width : 300px;
 	}
-.bottom{
+
+.sidebar{
+	float: left;
+	width: 175px;
+	background-color: #ddd;
+	margin-left: 20px;
+}
+	
+.footer{
 	position:fixed;}
 
 /* BootStrap */
