--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -28,29 +28,29 @@ html, body {
 
 #content {
 	 width: 450px;
-        padding: 20px;
-        margin-bottom: 20px;
-        float: left;
+     padding: 20px;
+     margin-bottom: 20px;
+     float: left;
 }
 
 #sidebar {
 	 width: 160px;
-        padding: 20px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        float: left;
+     padding: 20px;
+     margin-right: 20px;
+     margin-bottom: 20px;
+     float: left;
 }
 
 #extra {
 	width: 160px;
-        padding: 20px;
-        margin-bottom: 20px;
-        float: right;
+    padding: 20px;
+    margin-bottom: 20px;
+    float: right;
 }
 
 #footer {
 	clear: both;
-        padding: 20px;
+    padding: 20px;
 }
 /* header : 로고, 로그인 회원가입 버튼 */
 .logo_c{
@@ -67,35 +67,9 @@ html, body {
 	right: 50px;
 	position: fixed;
 }
-/*** Just for Looks ***/
-#header, #footer {
-    font-size: large;
-    text-align: center;
-    background: #999;
+/* container */
+.goods{
+	width: 100px;
+	height: auto;
 }
 
-#main_menu {
-    font-size: large;
-    text-align: center;
-    background: #DAEAAA;
-}
-#content {
-    font-size: large;
-    text-align: center;
-    background: #DDD;
-    height: 100px;
-}
-
-#sidebar {
-    font-size: large;
-    text-align: center;
-    background: #66F;
-    height: 100px;
-}
-
-#extra {
-    font-size: large;
-    text-align: center;
-    background: #F66;
-    height: 100px;
-}
