--- a/BitProject/WebContent/resources/bootstrap2/css/style.css
+++ b/BitProject/WebContent/resources/bootstrap2/css/style.css
@@ -9,20 +9,35 @@
 *
 *
 *******/
+
 body{
 	margin: 0;
 	padding: 0;
-	font-family: 'PT Serif', serif;
+	/* font-family: 'PT Serif', serif; */
+	font-family: 'Montserrat', sans-serif;
+	color: #fff;
+}
+.banner{	
+	background-color: #0A1F38;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    background-size: cover;
+    height: 500px;
+    position: relative;
+    z-index: 111;	
 }
 h1, h2, h3, h4, h5, h6{
 	font-family: 'Montserrat', sans-serif;
 }
 h1{
-	font-size: 30px;
-	color: #fff;
-	margin-top: 100px;
-	line-height: 1;
-	margin-bottom: 18px;
+	font-size: 27px;
+	color: #f98882;
+	margin: 72px 0 0 30px;
+	line-height: 1;	
+}
+h4{
+	margin-left: 30px;
 }
 .top-bar{
 	background: #2c3e50;
@@ -78,10 +93,10 @@ h1{
 	z-index: 111;
 }
 .header{
-	background: rgba(0, 0, 0, 0.52);
+	background: #0A1F38;
 	position: absolute;
 	width: 100%;
-	height: 500px;
+	height: 500px;	
 	left: 0;
 	margin-top: -500px;
 	z-index: 333;
@@ -93,46 +108,99 @@ h1{
 	line-height: 1;
 	margin-bottom: 18px;
 }
+.img-circle{
+	width: 200px;
+	margin: 35px 0 0 190px;
+}
 .seller_wrap{
-	width: 350px;
-	height: 330px;
-	margin-left: 60px;
+	width: 800px;
+	height: 250px;	
 	display: inline-block;	
 }
 .seller_img{
-	width: 45%;	
-	height: 330px;
-	display: inline-block;	
+	width: 50%;		
+	height: 250px;		
 	float: left;
+	display: inline-block;
+}
+.follow{
+	width: 800px;
+	height: 40px;
+	display: inline-block;
+	font-size: 16px;
+	color: #fff;
+	font-family: 'Montserrat', sans-serif;	
+	float: right;
+}
+.follow-label{	
+	height: 40px;
+	padding: 5px;
+	margin-right: 2px;
+	float: right;	
+}
+.follow a, a i.fa-plus-square-o{
+	color: #fff;
+}
+.follow i.fa-plus-square-o{
+	font-size: 20px;	
+	margin: 10px 10px 0 0;	
 }
 .seller_info{
-	width: 55%;
-	height: 330px;
+	width: 50%;
+	height: 250px;
 	display: inline-block;	
 	float: right;	
 }
-.frame_item{
-	border: 1px solid;
+.store_address{
+	font-size: 12px;
+	height: 40px;
+	margin: 5px 0 15px 31px;	
+	display: inline-block;
 }
-.frame_value{
-	
-	border: 1px solid #fff;
+.store_address a{
+	color: #fff;
+	font-size: 13px;
+	font-weight: bold;
 }
-
-.frame_value{
-	font-size: 3px;
+.store_address i.fa-map-marker{
+	color: #fff;
+	font-size: 18px;
 }
-.user img{
-	width: 140px;
-	height: 140px;
-	margin-top: 80px;
+.map_button{
+	color: black;	
 }
 .social-icons{
+	width: 800px;
+	height: 100px;	
+	margin: 5px 0 35px 0;
 	color: #fff;
 	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;		
 	text-decoration: none;
-	
+	display: inline-block;		
+}
+#sellerMyStore-social-icons{
+	margin-top: 50px;
+}
+.info_frame{
+	width:800px;
+	height: 50px;	
+}
+.frame_item{
+	text-align: center;	
+	width: 199px;
+	height: 50px;
+	border: 1px solid #fff;
+	display: inline-block;
+	float: left;	
+}
+.frame_value{
+	width: 199px;
+	height: 50px;
+	padding: 10px;	
+	border: 1px solid #fff;
+	display: inline-block;
+	float: left;		
 }
 .social-icons i.fa{
 	font-size: 25px;
@@ -143,7 +211,8 @@ h1{
 	-webkit-transition: all .5s ease 0s;
 	-moz-transition: all .5s ease 0s;
 	-o-transition: all .5s ease 0s;
-	-ms-transition: all .5s ease 0s;	
+	-ms-transition: all .5s ease 0s;
+		
 }
 .social-icons a i.fa-facebook:hover{
 	color: #3A5795;
@@ -185,9 +254,6 @@ h1{
 	-ms-transform: scale(1.2);
 	-o-transform: scale(1.2);
 }
-.social-icons{
-	margin-bottom: 66px;
-}
 .top-nav{
 	position: absolute;
 	top: 0;
@@ -204,12 +270,17 @@ h1{
 }
 .top-click a i.fa{
 	font-size: 18px;
-	padding: 15px;
+	/* padding: 15px; */
 	color: #fff;
 }
 .main-nav, .navbar-default{
+	width: 800px;
 	vertical-align: bottom;
-	text-align: center;
+	text-align: center;	
+	display: inline-block;		
+}
+.main-nav{	
+	display: inline-block;
 }
 .navbar-default{
 	background: transparent;
@@ -230,17 +301,27 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	border-bottom: 5px solid #fff;
 	color: #fff;
 }
-.navbar-nav{
-	width: 760px;
-	float: none;
+.nav-item{
+	width: 33%;
+	padding: 5px;
+	display: inline-block;
 }
-
+.navbar-nav{
+	width: 800px;
+	display: inline-block;
+}
 .container{
 	width:800px;
 	padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
+.container-fluid{
+	padding: 0;	
+}
+.text-center{
+	padding: 0;
 }
 
 
@@ -624,9 +705,24 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
-.contact span{
-	font-size: 17px;
+.inquiry_wrap{
+	width: 620px;
+	margin-left: 90px;
+}
+.inquiry_title{
+	width: 400px;	
+	height: 50px;
+	color: #0A1F38;
+	font-size: 35px;
 	font-weight: bold;
+	font-family: 'Montserrat', sans-serif;
+	display: inline-block;
+}
+.inquiry_subTitle{
+	width: 400px ;	
+	font-size: 18px;	
+	font-weight: bold;
+	color: grey;
 	margin-bottom: 20px;
 	display: inline-block;
 }
