로그인시 메뉴 부분 위치 수정

--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -1952,11 +1952,17 @@
 				display: inline-block;
 				padding: 1em 0 0 1em;
 			}
-		ul.main_icons {
+		ul.main_icons_x {
 			cursor: pointer;
 			list-style: none;
 			display: -webkit-inline-box;
 			margin-left: 650px;
+		}
+		ul.main_icons_o {
+			cursor: pointer;
+			list-style: none;
+			display: -webkit-inline-box;
+			margin-left: 630px;
 		}
 		
 		ul.actions {
