--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -3204,7 +3204,17 @@
     padding: 1em;
     margin-left: 34%;
 }
-	
+.input-group-addon {
+	padding: 6px 12px;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1;
+	color: #555;
+	text-align: center;
+	background-color: #FFFFFF;
+	border: 1px solid #ccc;
+	border-radius: 4px
+}
 	
 /* Footer */
 
