--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -1957,12 +1957,14 @@
 			list-style: none;
 			display: -webkit-inline-box;
 			margin-left: 650px;
+			color: #0A1F38;
 		}
 		ul.main_icons_o {
 			cursor: pointer;
 			list-style: none;
 			display: -webkit-inline-box;
 			margin-left: 630px;
+			color: #0A1F38;
 		}
 		
 		ul.actions {
@@ -2255,7 +2257,7 @@
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #585858;
+			color: #0A1F38;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2292,8 +2294,8 @@
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #585858;
-			border-color: #585858;
+			background: #0A1F38;
+			border-color: #0A1F38;
 			color: #ffffff;
 			content: '\f00c';
 		}
@@ -2480,8 +2482,8 @@
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #585858;
-		color: #585858 !important;
+		box-shadow: inset 0 0 0 2px #0A1F38;
+		color: #0A1F38 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2555,7 +2557,7 @@
 		button.special,
 		.button.special {
 			box-shadow: none;
-			background-color: #585858;
+			background-color: #0A1F38;
 			color: #ffffff !important;
 		}
 
@@ -2878,6 +2880,7 @@
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
+			color: #0A1F38;
 		}
 
 			#header .logo > * {
@@ -3024,7 +3027,7 @@
 		max-width: 80%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		background: #585858;
+		background: #0A1F38;
 		color: #ffffff;
 		cursor: default;
 		visibility: hidden;
