--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -2435,9 +2435,9 @@
 			border-right: 0;
 		}
 
-			table tbody tr:nth-child(2n + 1) {
+			/* table tbody tr:nth-child(2n + 1) {
 				background-color: rgba(144, 144, 144, 0.075);
-			}
+			} */
 
 		table td {
 			padding: 0.75em 0.75em;
