--- a/BitProject/WebContent/resources/bootstrap2/css/style.css
+++ b/BitProject/WebContent/resources/bootstrap2/css/style.css
@@ -31,10 +31,15 @@ h1, h2, h3, h4, h5, h6{
 	font-family: 'Montserrat', sans-serif;
 }
 h1{
-	font-size: 27px;
+	color: #585858;
+	font-family: "Source Sans Pro", Helvetica, sans-serif;
+	font-size: 16pt;
+	font-weight: 300;
+	line-height: 1.75;	
+	/* font-size: 27px;
 	color: #f98882;
 	margin: 72px 0 0 30px;
-	line-height: 1;	
+	line-height: 1;	 */
 }
 h4{
 	margin-left: 30px;
