--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -1976,7 +1976,7 @@
 		ul.main_icons_o {
 			cursor: pointer;
 			list-style: none;
-			display: -webkit-inline-box;
+			display: inline-flex;
 			margin-left: 356px;
 			color: #0A1F38;
 		}
