로그인 메뉴 효과 수정

--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -3445,16 +3445,12 @@
 	border:0px;
 	margin:0px;
 	padding:0px;
-	font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
-	font-size:14px;
-	font-weight:bold;
 }
 
 .menubar ul{
-	background: rgb(109,109,109);
 height:50px;
 list-style:none;
-margin:0;
+margin-left:432px;
 padding:0;
 }
 
@@ -3464,7 +3460,6 @@ padding:0px;
 }
 
 .menubar li a{
-background: rgb(109,109,109);
 color:#cccccc;
 display:block;
 font-weight:normal;
@@ -3476,13 +3471,11 @@ text-decoration:none;
 }
 
 .menubar li a:hover, .menubar ul li:hover a{
-background: rgb(71,71,71);
 color:#FFFFFF;
 text-decoration:none;
 }
 
 .menubar li ul{
-background: rgb(109,109,109);
 display:none; /* 평상시에는 드랍메뉴가 안보이게 하기 */
 height:auto;
 padding:0px;
@@ -3500,7 +3493,6 @@ display:block; /* 마우스 커서 올리면 드랍메뉴 보이게 하기 */
 }
 
 .menubar li li {
-background: rgb(109,109,109);
 display:block;
 float:none;
 margin:0px;
@@ -3510,6 +3502,7 @@ width:200px;
 
 .menubar li:hover li a{
 background:none;
+color: #0A1F38;
 }
 
 .menubar li ul a{
@@ -3523,7 +3516,6 @@ text-align:left;
 }
 
 .menubar li ul a:hover, .menubar li ul li:hover a{
-background: rgb(71,71,71);
 border:0px;
 color:#ffffff;
 text-decoration:none;
