--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -1978,6 +1978,9 @@
 			margin-left: 356px;
 			color: #0A1F38;
 		}
+		ul#main_icons_o {
+		    margin-left: 388px;
+		}
 		
 		ul.main_icons_o>li:hover{
 		    border-bottom-color: transparent;
@@ -3117,7 +3120,14 @@
 					#menu > .inner > ul > li p {
 						display: initial;
 						line-height: 3.5;
+						cursor: pointer;
 					}
+					#menu > .inner > ul > li p:hover{
+						border-bottom-color: transparent;
+					    color: #f2849e !important;
+					    text-decoration: underline;
+					}
+					
 					
 					#menu > .inner > ul > li:first-child {
 						border-top: 0;
