--- a/BitProject/WebContent/resources/css/main.css
+++ b/BitProject/WebContent/resources/css/main.css
@@ -3536,7 +3536,7 @@ height:50px;
 font-size:70%;
 font-style:normal;
 margin:0px;
-padding:0px 10px 0px 15px;
+padding:18px 10px 0px 15px;
 text-align:left;
 }
 
@@ -3596,7 +3596,7 @@ span.signin_jh {
     position: inherit;
     margin-top: -218px;
     margin-left: 674px;
-    background-color: burlywood;
+    background-color: aliceblue;
     width: 200px;
     text-align: right;
 }
