--- a/BitProject/WebContent/resources/css/customerStore.css
+++ b/BitProject/WebContent/resources/css/customerStore.css
@@ -10,7 +10,7 @@
 }
 .inner-sellerMyStore{
 	background: url("../images/sellerMyStore_banner2.jpg");	
-	width: 100%;	
+	width: 100%;		
 	background-color: #0A1F38;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -44,8 +44,11 @@
 }
 .seller_wrap{
 	width: 100%;
-	height: 450px;	
+	height: 420px;		
 	display: inline-block;	
+}
+#seller_wrap_{
+	height: 440px;
 }
 .seller_img{
 	width: 50%;	
@@ -80,14 +83,22 @@
 }
 .content-middle{
 	width: 100%;
-	padding-left: 720px;	
+	padding-right: 5px;
 	color: #fff;
-	font-size: 24px;
+	text-align: right;
+	font-size: 20px;	
+	font-weight: bold;
 	font-family: 'Montserrat', sans-serif;		
 	display: inline-block;
 }
-.content-middle a, a.i.fa-arrow-circle-right{
+.content-middle a{
+	width: 100%;	
+	color: #fff;
 	display: inline-block;
+}
+.content-middle i.fa-plus-square, .content-middle h5 {
+	display: inline-block;	
+	margin: 0;
 }
 .seller_info{
 	width: 50%;	
@@ -100,6 +111,8 @@
 	font-size: 20px;
 	height: 40px;
 	margin: 0 0 15px 44px;	
+	color: #fff;
+	font-size: 14px;
 	display: inline-block;	
 }
 .store_address a{
@@ -110,6 +123,10 @@
 .store_address i.fa-map-marker{
 	color: #fff;
 	font-size: 23px;
+}
+.store_address i.fa-map-marker:hover{
+	border-bottom-color: transparent;
+    color: #f2849e;
 }
 .map_button{
 	color: #fff;	
@@ -257,6 +274,9 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	height: 110px;
 	display: inline-block;
 }
+.content-inpur select{
+	width: 600px;
+}
 .form-control{
 	height: 45px;
 }
@@ -289,11 +309,12 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 }
 .inner-content1{	
 	width: 100%;
-	padding: 50px 160px 0 220px;	
+	padding: 50px 160px 50px 220px;	
 	display: inline-block;	
 }
 .inner-content2{
 	width: 100%;
+	padding: 50px 20px 50px 20px;
 		
 	display: inline-block;	
 }
@@ -301,17 +322,248 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	padding-left: 410px;	
 	margin-bottom: 40px;	
 }
-/* .content-form{
+.content-form{
 	width: 100%;
+	margin: 0;
 	display: inline-block;	
-} */
+}
 .content_list{
 	width: 100%;
 	display: inline-block;	
 }
 .input-set{
-	width: 700px;
+	width: 800px;
+	display: inline-block;
 }
 #submitBtn{
 	width: 100px;
+}
+
+
+/* custmerStore page */
+
+section, img{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+.posts {
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin: 0 0 2em -6em;
+	width: calc(100% + 6em);
+}
+
+	.posts article {
+		-moz-flex-grow: 0;
+		-webkit-flex-grow: 0;
+		-ms-flex-grow: 0;
+		flex-grow: 0;
+		-moz-flex-shrink: 1;
+		-webkit-flex-shrink: 1;
+		-ms-flex-shrink: 1;
+		flex-shrink: 1;
+		margin: 0 0 6em 6em;
+		position: relative;
+		width: calc(33.33333% - 6em);
+	}
+
+		.posts article:before {
+			background: rgba(210, 215, 217, 0.75);
+			content: '';
+			display: block;
+			height: calc(100% + 6em);
+			left: -3em;
+			position: absolute;
+			top: 0;
+			width: 1px;
+		}
+
+		.posts article:after {
+			background: rgba(210, 215, 217, 0.75);
+			bottom: -3em;
+			content: '';
+			display: block;
+			height: 1px;
+			position: absolute;
+			right: 0;
+			width: calc(100% + 6em);
+		}
+
+		.posts article > :last-child {
+			margin-bottom: 0;
+		}
+
+		.posts article .image {
+			display: block;
+			margin: 0 0 2em 0;
+		}
+
+			.posts article .image img {
+				display: block;
+				width: 100%;
+			}
+
+	@media screen and (min-width: 1681px) {
+
+		.posts article:nth-child(3n + 1):before {
+			display: none;
+		}
+
+		.posts article:nth-child(3n + 1):after {
+			width: 100%;
+		}
+
+		.posts article:nth-last-child(1), .posts article:nth-last-child(2), .posts article:nth-last-child(3) {
+			margin-bottom: 0;
+		}
+
+			.posts article:nth-last-child(1):before, .posts article:nth-last-child(2):before, .posts article:nth-last-child(3):before {
+				height: 100%;
+			}
+
+			.posts article:nth-last-child(1):after, .posts article:nth-last-child(2):after, .posts article:nth-last-child(3):after {
+				display: none;
+			}
+
+	}
+
+	@media screen and (max-width: 1680px) {
+
+		.posts article {
+			width: calc(50% - 6em);
+		}
+
+			.posts article:nth-last-child(3) {
+				margin-bottom: 6em;
+			}
+
+	}
+
+	@media screen and (min-width: 481px) and (max-width: 1680px) {
+
+		.posts article:nth-child(2n + 1):before {
+			display: none;
+		}
+
+		.posts article:nth-child(2n + 1):after {
+			width: 100%;
+		}
+
+		.posts article:nth-last-child(1), .posts article:nth-last-child(2) {
+			margin-bottom: 0;
+		}
+
+			.posts article:nth-last-child(1):before, .posts article:nth-last-child(2):before {
+				height: 100%;
+			}
+
+			.posts article:nth-last-child(1):after, .posts article:nth-last-child(2):after {
+				display: none;
+			}
+
+	}
+
+	@media screen and (max-width: 736px) {
+
+		.posts {
+			margin: 0 0 2em -4.5em;
+			width: calc(100% + 4.5em);
+		}
+
+			.posts article {
+				margin: 0 0 4.5em 4.5em;
+				width: calc(50% - 4.5em);
+			}
+
+				.posts article:before {
+					height: calc(100% + 4.5em);
+					left: -2.25em;
+				}
+
+				.posts article:after {
+					bottom: -2.25em;
+					width: calc(100% + 4.5em);
+				}
+
+				.posts article:nth-last-child(3) {
+					margin-bottom: 4.5em;
+				}
+
+	}
+
+	@media screen and (max-width: 480px) {
+
+		.posts {
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.posts article {
+				margin: 0 0 4.5em 0;
+				width: 100%;
+			}
+
+				.posts article:before {
+					display: none;
+				}
+
+				.posts article:after {
+					width: 100%;
+				}
+
+				.posts article:last-child {
+					margin-bottom: 0;
+				}
+
+					.posts article:last-child:after {
+						display: none;
+					}
+
+	}
+a.image{
+	width: auto;		
+	overflow: hidden;
+	border-radius: 10px;
+}
+.image{
+	width: auto;	
+	
+	border-radius: 0.375em;
+    border: 0;
+    display: inline-block;
+    position: relative;
+}
+a.image img{
+	width: auto;	
+	height: 300px;
+	transition: transform 0.2s ease;
+}
+ul#actions-btn{
+	padding-left: 110px;
+}
+.p-wrap{
+	width: 100%;
+}
+p.p-title{
+	margin-bottom: 15px;
+}
+p.p-sub-title1{
+	width: 32%;	
+	font-weight: bold;
+	display: inline-block;
+}
+p.p-sub-title2{
+	width: 58%;
+	padding-left: 20px;
+	 display: inline-block;
 }
