--- a/BitProject/WebContent/resources/css/customerStore.css
+++ b/BitProject/WebContent/resources/css/customerStore.css
@@ -134,11 +134,20 @@
 .social-icons{
 	width: 100%;
 	height: 150px;		
-	margin: 5px 0 70px 0;	
+	margin: 5px 0 30px 0;	
 	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;		
 	text-decoration: none;
 	display: inline-block;		
+}
+.social-icons2{
+	width: 100%;
+	height: 150px;		
+	margin: 5px 0 30px 0;
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;		
+	text-decoration: none;
+	display: inline-block;
 }
 .info_frame{
 	width: 100%;
@@ -309,7 +318,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 }
 .inner-content1{	
 	width: 100%;
-	padding: 50px 160px 50px 220px;	
+	padding: 10px 160px 0 220px;	
 	display: inline-block;	
 }
 .inner-content2{
