--- a/BitProject/WebContent/resources/css/customerStore.css
+++ b/BitProject/WebContent/resources/css/customerStore.css
@@ -26,7 +26,7 @@
 }
 #storeName{	
 	font-size: 28px;
-	color: #fff;	
+	color:#f2849e;	
 	line-height: 1.75;	
 	margin: 10px 0 0 35px;
 	font-weight: bold;
@@ -229,6 +229,7 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 	margin-right: 100px;
 	display: inline-block;
 }
+
 .container{
 	width:1000px;
 	padding-right: 0 15px 0 15px;    
@@ -244,6 +245,12 @@ ul.navbar li a:hover, ul.navbar li a.active, .navbar-default .navbar-nav>li>a:ho
 #bs-example-navbar-collapse-1{
 	margin-right: 100px;
 }
+/* .navbar-collapse>li>a.inquiryStore{
+	border-bottom: 5px soild #fff;
+}
+.navbar-nav>li>a.inquiryStore {
+	border-bottom: 5px soild #fff;
+} */
 .content_wrap{
 	width: 100%;
 	height: 100%;	
