--- a/BitProject/WebContent/resources/css/productPage.css
+++ b/BitProject/WebContent/resources/css/productPage.css
@@ -347,6 +347,10 @@ table th{
 .deleteProduct_btn{			
 	float: left; 
 }
+.option-set{
+	width: 120px;
+	text-align: center;
+}
 .regProduct_button{
 	float: right;		
 }
@@ -367,9 +371,13 @@ table th{
 	width: 100%;	
 	display: inline-block;	
 }
-.content img{
+.table-wrapper img{
 	width: 120px;
 	height: 120px;
+}
+.content img{
+	width: 150px;
+	height: 150px;
 	border-radius: 5px;
 }
 input[type="checkbox"]{
