상점정보 이미지 css수정

--- a/BitProject/WebContent/resources/css/customerStore.css
+++ b/BitProject/WebContent/resources/css/customerStore.css
@@ -39,8 +39,10 @@
 	font-family: 'Montserrat', sans-serif;	
 }
 .img-circle{
-	width: 320px;	
-	display: inline-block;
+	width: 320px;
+    height: 320px;
+    display: inline-block;
+    background: center center no-repeat;
 }
 .seller_wrap{
 	width: 100%;
